added /me to all links

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<p>{{ site.description }} <mark>Shirley</mark>.</p>
 				<h4>I strive to craft elegant solutions to real problems, in a way that is both enjoyable to interact with and beautiful to look at.
 					<br></br>
-					<em><a title="Resume" href="{{ site.baseurl | append: "/assets/ShirleyXiao_Resume.pdf" }}">View my resumé →</a></em>
+					<em><a title="Resume" href="{{ site.baseurl | append: "/me/assets/ShirleyXiao_Resume.pdf" }}">View my resumé →</a></em>
 				</h4>
 			</div>
 		</section>
@@ -42,7 +42,7 @@
 		</section>
 	</main>
 	{% include footer.html %}
-	<script src="{{ "/assets/scripts/vendor/scrollreveal.min.js" | prepend: site.baseurl }}"></script>
-	<script src="{{ "/assets/scripts/home.js" | prepend: site.baseurl }}"></script>
+	<script src="{{ "/me/assets/scripts/vendor/scrollreveal.min.js" | prepend: site.baseurl }}"></script>
+	<script src="{{ "/me/assets/scripts/home.js" | prepend: site.baseurl }}"></script>
 </body>
 </html>
