changed sailec woff2 to woff' '

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>{{ site.author }} / {{ site.tagline }}</title>
+	<title>{{ site.author }}</title>
 	<meta name="author" content="{{ site.author }}">
 	<meta name="description" content="{{ site.description }}">
 	<meta name="keywords" content="{{ site.keywords }}">
@@ -16,7 +16,7 @@
 			<div class="container">
 				<h2>About me</h2>
 				<p>{{ site.description }} <mark>Shirley</mark>.</p>
-				<h4>(10) I strive to craft elegant solutions to real problems, in a way that is both enjoyable to interact with and beautiful to look at.
+				<h4>(11) I strive to craft elegant solutions to real problems, in a way that is both enjoyable to interact with and beautiful to look at.
 					<br></br>
 					<em><a title="Resume" href="{{ site.baseurl | append: "/assets/ShirleyXiao_Resume.pdf" }}">View my resumé →</a></em>
 				</h4>
