--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<section class="intro">
 			<div class="container">
 				<h2>About me</h2>
-				<p>{{ site.description }} <mark>Shirley</mark>.</p>
+				<p style="margin-bottom:0.7em;font-size:1.8em;">{{ site.description }} <mark>Shirley</mark>.</p>
 				<h4>(11) I strive to craft elegant solutions to real problems, in a way that is both enjoyable to interact with and beautiful to look at.
 					<br></br>
 					<em><a title="Resume" href="{{ site.baseurl | append: "/assets/ShirleyXiao_Resume.pdf" }}">View my resumé →</a></em>
