--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,7 @@ title: Projects
 
         <section class="projects">
 			<div class="container">
-				<h2>Featured Projects</h2>
+				<h2>Projects</h2>
 				<ul class="projects-list">
                     {% for item in site.categories.projects reversed %}
 						<li>
