--- a/about.html
+++ b/about.html
@@ -24,10 +24,10 @@ title: About
                     <div>
                       <h4>Most of all, I like creating. Programming and designing allow me to build 
                         beautiful experiences out of budding ideas, and empathetic solutions to complex
-                        problems. I solve problems through observation and I'm fascinated by the 
+                        problems. I'm most excited about creating meaningful tools that enhance the
                         connections that bring people together.
                         <br></br>
-                        I study computer science at the University of California, Berkeley. My hobbies 
+						I study computer science at the University of California, Berkeley. My hobbies 
                         include chasing sunsets, curating playlists, and making art.</h4>
                     </div>
                   </div>
