--- a/me.html
+++ b/me.html
@@ -4,17 +4,6 @@ title: About
 <!DOCTYPE html>
 <html lang="en">
 
-<body>
-	{% include header.html %}
-	<main class="content">
-		<section class="intro">
-			<div class="container">
-				<h2>About</h2>
-				<a title="Home" href="{{ site.baseurl }}">Hi! I updated my portfolio domain. Please click here to be redirected →</a>
-			</div>
-		</section>
+	<a title="Home" href="/">Hi! I updated my portfolio domain. Please click here to be redirected →</a>
 
-	</main>
-
-</body>
 </html>
