--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<div class="container">
 				<h2> </h2>
 				<p style="margin-bottom:0.7em;font-size:1.8em;line-height:1.2em">Hi, I'm <mark>Shirley</mark>.</p>
-				<h4>I strive to craft elegant solutions to real problems, in a way that is both enjoyable to interact with and beautiful to look at.
+				<h4>I am an avid creator, an excited learner, a very good sushi-eater.
 					<br></br>
 					<em><a title="Resume" href="{{ site.baseurl | append: "/assets/ShirleyXiao_Resume.pdf" }}">View my resumé →</a></em>
 				</h4>
