Updated footer background color

--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@ title: About
                         connections that bring people together.
                         <br></br>
 						I study computer science at the University of California, Berkeley. My hobbies 
-                        include <a href="{{ site.baseurl | append: "/sunsets" }}">Vhasing sunsets</a>, <a href="https://open.spotify.com/user/1269540232?si=RY-55jWzQze3vuG-yUadIg">curating playlists</a>, and making art.</h4>
+                        include <a href="{{ site.baseurl | append: "/sunsets" }}">chasing sunsets</a>, <a href="https://open.spotify.com/user/1269540232?si=RY-55jWzQze3vuG-yUadIg">curating playlists</a>, and making art.</h4>
                     </div>
                   </div>
                 
