--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<div class="container">
 				<h2> </h2>
 				<p style="margin-bottom:0.7em;font-size:1.8em;line-height:1.2em">Hi, I'm <mark>Shirley</mark>.</p>
-				<h4>I like creating things, learning about the world, and eating sushi.
+				<h4>I like coding, <a href="{{ site.baseurl | append: "/sunsets" }}">sunsets</a>, and <a href="{{ site.baseurl | append: "/pastries" }}">eating Asian pastries</a>. 
 					<br></br>
 					<em><a title="Resume" href="{{ site.baseurl | append: "/assets/ShirleyXiao_Resume.pdf" }}">View my resumé →</a></em>
 				</h4>
